--- a/index.html
+++ b/index.html
@@ -13,21 +13,24 @@
     
     <div id="container" class="site-width">
         <div id="header">
-            <div class="left-align">
-                <a href="#"><span class="icon icon-back"></span></a>
-                <a href="#"><span class="icon icon-close"></span></a>
+            <div class="left-side">
+                <span class="mobile-view"><a href="#" class="icon icon-back"></a></span>
+                <span class="desktop-view"><a href="#" class="icon icon-close"></a></span>
             </div>
             
-            <div class="right-align">
-                list bag tick dots
+            <div class="right-side">
+                <a href="#" class="icon icon-list"></a>
+                <a href="#" class="icon icon-work"></a>
+                <a href="#" class="icon icon-tick"></a>
+                <a href="#" class="icon icon-dots"></a>
             </div>
         </div>
 
-        <div id="body">
+        <div id="body" class="padding-lr">
             asdasdasd asdsa asd
         </div>
 
-        <div id="footer">
+        <div id="footer" class="padding-lr">
             user input
         </div>
     </div>
